--- a/src/components/organisms/Header.css
+++ b/src/components/organisms/Header.css
@@ -75,3 +75,21 @@ header img {
 main {
   padding-top: 80px;
 }
+
+.user-logo-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  cursor: pointer;
+}
+
+.user-logo {
+  width: 32px;
+  height: 32px;
+  border-radius: 4px;
+}
+
+.user-arrow {
+  font-size: 12px;
+  color: #e5e5e5;
+}
