--- a/src/components/organisms/Header.css
+++ b/src/components/organisms/Header.css
@@ -18,7 +18,10 @@ header {
   align-items: center;
   justify-content: space-between;
   z-index: 1000;
+}
 
+main {
+  padding-top: 70px;  /* igual a header height */
 }
 
 .header-left {
@@ -92,4 +95,9 @@ main {
 .user-arrow {
   font-size: 12px;
   color: #e5e5e5;
+}
+
+header.scrolled {
+  background-color: rgba(0, 0, 0, 1);
+  transition: background-color 0.5s ease;
 }
