--- a/src/components/organisms/Spotlight.css
+++ b/src/components/organisms/Spotlight.css
@@ -1,23 +1,11 @@
 .spotlight {
+  background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
+  height: 55vh;
+  width: 100%;
   position: relative;
-  height: 45vh;
-  width: 100%;
-  overflow: hidden;
   color: white;
-}
-
-.spotlight-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.spotlight-video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .spotlight-content {
