--- a/src/components/organisms/Spotlight.css
+++ b/src/components/organisms/Spotlight.css
@@ -1,11 +1,8 @@
 .spotlight {
-  background-size: cover;
-  background-position: center top;
-  background-repeat: no-repeat;
-  height: 55vh;
-  width: 100%;
   position: relative;
-  color: white;
+  height: calc(100vh - 80px);
+  overflow: hidden;
+  z-index: 1; /* el spotlight queda debajo del header */
 }
 
 .spotlight-content {
@@ -13,6 +10,7 @@
   bottom: 22%;
   left: 4%;
   max-width: 500px;
+  z-index: 10; /* texto sobre la imagen */
 }
 
 .spotlight-title {
@@ -47,4 +45,15 @@
 .info {
   background: rgba(109, 109, 110, 0.7);
   color: white;
+}
+
+.spotlight-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center top;
+  z-index: 0; /* imagen al fondo */
 }
